# desafio_II

./: CMakeLists.txt  Informe Desafio II (1).docx  Informe de responsabilidades Desafío II (1) (1).docx  equipo.cpp  equipo.h  equipopartido.cpp  equipopartido.h  fixture.cpp  fixture.h  global.cpp  global.h  grupo.cpp  grupo.h  grupos.cpp  grupos.h  informe preliminar.txt  jugador.cpp  jugador.h  main.cpp  partido.cpp  partido.h  tabla.cpp  tabla.h  torneo.cpp  torneo.h
